# VTLA-ACT

./: .gitignore  README.md  conda_env.yaml  constants.py  imitate_episodes.py  maniskill_env.py  policy.py  pyproject.toml  sim_env.py  utils.py  verify_overfit.py
detr/: main.py
detr/models/: __init__.py  backbone.py  detr_vae.py  position_encoding.py  tactile_encoder.py  transformer.py
scripts/: collect_data.py  convert_maniskill_to_act.py  evaluate_maniskill.py  open_loop_replay.py  record_maniskill_episodes.py  visualize_vtla_dataset.py
